feat: add pack sizes storage
