# src/database/models/pack_sizes.go
@@ -1,0 +1,8 @@
+package models
+
+import "github.com/google/uuid"
+
+type PackSize struct {
+	ID   uuid.UUID `json:"id"`
+	Size int       `json:"size"`
+}
